--- a/AndroidFacebookConnect/project.properties
+++ b/AndroidFacebookConnect/project.properties
@@ -8,6 +8,6 @@
 # project structure.
 
 # Project target.
-target=android-8
+target=android-10
 android.library=false
-android.library.reference.1=../../Users/shit/Desktop/desktop/facebook-facebook-android-sdk-v1.1-0-gc58af0b/facebook-facebook-android-sdk-c58af0b/facebook
+android.library.reference.1=../../facebook-android-sdk-3.20.0/facebook
